# blog

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
.claude/: settings.local.json
.trae/specs/demo_code_review/: checklist.md  spec.md  tasks.md
c_utils/: CMakeLists.txt  README.md
c_utils/.trae/specs/demo_implementation/: checklist.md  spec.md  tasks.md
c_utils/.trae/specs/project_ideas/: checklist.md  spec.md  tasks.md
c_utils/c_utils/: adler32.c  adler32.h  aes_tiny.c  aes_tiny.h  arena.c  arena.h  argparse.c  argparse.h  astar.c  astar.h  avl.c  avl.h  backtrace.c  backtrace.h  base16.c  base16.h  base32.c  base32.h  base32_hex.c  base32_hex.h  base58.c  base58.h  base64.c  base64.h  bellman_ford.c  bellman_ford.h  bigint.c  bigint.h  binary_search.c  binary_search.h  bitset.c  bitset.h  bitset_compressed.c  bitset_compressed.h  bitstream.c  bitstream.h  bloom.c  bloom.h  bloom_filter_counting.c  bloom_filter_counting.h  (+270 more)
c_utils/demo/: demo_adler32.c  demo_aes_tiny.c  demo_arena.c  demo_argparse.c  demo_astar.c  demo_avl.c  demo_backtrace.c  demo_base16.c  demo_base32.c  demo_base32_hex.c  demo_base58.c  demo_base64.c  demo_bellman_ford.c  demo_bigint.c  demo_binary_search.c  demo_bitset.c  demo_bitset_compressed.c  demo_bitstream.c  demo_bloom.c  demo_bloom_filter_counting.c  demo_bmp_tiny.c  demo_bplus_tree.c  demo_chacha20_tiny.c  demo_cjson.c  demo_coap_pkt.c  demo_cobs.c  demo_color.c  demo_complex.c  demo_config.c  demo_consistent_hash.c  demo_convex_hull.c  demo_cpu_affinity.c  demo_cpu_usage.c  demo_crc32.c  demo_cron.c  demo_crypto.c  demo_csv.c  demo_csv_writer.c  demo_daemon.c  demo_delta_encoding.c  (+132 more)
c_utils/projects/benchmark/: benchmark.c
c_utils/projects/cache_server/: cache_server.c
c_utils/projects/file_checksum/: file_checksum.c
c_utils/projects/graph_visualizer/: graph_visualizer.c
c_utils/projects/log_analyzer/: log_analyzer.c
c_utils/projects/message_queue/: message_queue.c
c_utils/projects/process_monitor/: process_monitor.c
c_utils/projects/task_manager/: task_manager.c
c_utils/projects/text_diff/: text_diff.c
c_utils/projects/text_diff/test_files/: file1.txt  file2.txt
c_utils/tests/: test_adler32.c  test_aes_tiny.c  test_arena.c  test_argparse.c  test_astar.c  test_avl.c  test_backtrace.c  test_base16.c  test_base32.c  test_base32_hex.c  test_base58.c  test_base64.c  test_bellman_ford.c  test_bigint.c  test_binary_search.c  test_bitset.c  test_bitset_compressed.c  test_bitstream.c  test_bloom.c  test_bloom_filter_counting.c  test_bmp_tiny.c  test_bplus_tree.c  test_chacha20_tiny.c  test_cjson.c  test_coap_pkt.c  test_cobs.c  test_color.c  test_complex.c  test_config.c  test_consistent_hash.c  test_convex_hull.c  test_cpu_affinity.c  test_cpu_usage.c  test_crc32.c  test_cron.c  test_crypto.c  test_csv.c  test_csv_writer.c  test_daemon.c  test_delta_encoding.c  (+114 more)
posts/: hello-world.md
public/: cem.html  eng.html  quadratic.css  quadratic.html  quadratic.js  tang-poems.html
public/english-grammar/: index.html
public/english-grammar/css/: style.css
public/english-grammar/docs/plans/: 2026-03-29-english-grammar-learning-design.md
public/english-grammar/js/: main.js  questions.js
public/english-grammar/pages/: achievements.html  help.html  settings.html
public/english-grammar/pages/grammar/: comparison.html  conjunctions.html  infinitive-gerund.html  modal-verbs.html  passive-voice.html  past-continuous.html  present-perfect.html
public/english-grammar/pages/practice/: practice.html
src/app/: globals.css  layout.tsx  page.tsx
src/app/c-utils/: CodeViewer.tsx  layout.tsx  page.tsx
src/app/posts/[id]/: page.tsx
src/components/: Footer.tsx  Header.tsx  PostCard.tsx
src/lib/: api.ts
